--- a/Dynamic_Pricing_for_Urban_Parking_Lots_Capstone_Project.ipynb
+++ b/Dynamic_Pricing_for_Urban_Parking_Lots_Capstone_Project.ipynb
@@ -73,7 +73,7 @@
         "print(\"--- Milestone 1: Data Understanding, Exploration, and Preprocessing ---\")\n",
         "\n",
         "# 1. Load the dataset\n",
-        "# Using 'dataset (1).csv' as per the last uploaded file.\n",
+        "# Using 'dataset.csv' as per the last uploaded file.\n",
         "DATASET_FILENAME = 'dataset.csv'\n",
         "print(f\"Loading the dataset '{DATASET_FILENAME}'...\")\n",
         "try:\n",
