--- a/Dynamic_Pricing_for_Urban_Parking_Lots_Capstone_Project.ipynb
+++ b/Dynamic_Pricing_for_Urban_Parking_Lots_Capstone_Project.ipynb
@@ -53,12 +53,12 @@
         "# Model 2 Demand Function Coefficients (tuned for illustrative purposes)\n",
         "# These coefficients should ideally be determined through regression or domain expertise.\n",
         "# Positive alpha for OccupancyRate, QueueLength, IsSpecialDay, VehicleTypeWeight\n",
-        "# For Traffic, assuming higher traffic around the lot implies higher demand for parking.\n",
-        "ALPHA_OCCUPANCY = 0.5      # Impact of occupancy rate on demand\n",
-        "ALPHA_QUEUELENGTH = 0.3    # Impact of queue length on demand\n",
-        "ALPHA_TRAFFIC = 0.2        # Impact of traffic condition on demand (positive for higher demand)\n",
-        "ALPHA_SPECIALDAY = 1.0     # Impact of special day on demand\n",
-        "ALPHA_VEHICLETYPE = 0.1    # Impact of vehicle type on demand\n",
+        
+        "ALPHA_OCCUPANCY = 0.5      \n",
+        "ALPHA_QUEUELENGTH = 0.3    \n",
+        "ALPHA_TRAFFIC = 0.2        \n",
+        "ALPHA_SPECIALDAY = 1.0     \n",
+        "ALPHA_VEHICLETYPE = 0.1    \n",
         "\n",
         "# Model 2 Price Adjustment Coefficient\n",
         "LAMBDA_MODEL2 = 0.5 # Sensitivity of price to normalized demand\n",
@@ -81,10 +81,6 @@
         "    print(\"Dataset loaded successfully.\")\n",
         "except FileNotFoundError:\n",
         "    print(f\"Error: '{DATASET_FILENAME}' not found. Please ensure the file is in the correct directory (e.g., uploaded to Colab).\")\n",
-        "    # In a real scenario, you might want to exit or provide a fallback.\n",
-        "    # For this notebook, we'll assume the file is present.\n",
-        "    raise\n",
-        "\n",
         "# 2. Display basic information and descriptive statistics\n",
         "print(\"\\n--- Initial Data Overview ---\")\n",
         "print(\"\\nFirst 5 rows of the dataset:\")\n",
@@ -449,80 +445,8 @@
         "    return max(MIN_PRICE_GLOBAL, min(MAX_PRICE_GLOBAL, model3_price))\n",
         "\n",
         "\n",
-        "# --- Pathway Pipeline Structure (Illustrative) ---\n",
-        "\n",
-        "# 1. Data Ingestion: Read data as a streaming CSV\n",
-        "# In a real scenario, you'd point to your actual data source.\n",
-        "# For local testing, you might use a generator or a small CSV.\n",
-        "# input_stream = pw.read(pw.io.csv.read_csv(\n",
-        "#     'dataset (1).csv', # Use the correct filename for Pathway input\n",
-        "#     mode='streaming',\n",
-        "#     schema=pw.schema_from_dataframe(df), # Infer schema from your preprocessed DataFrame\n",
-        "#     primary_key=['ID'], # Unique ID for each record\n",
-        "#     time_col='Timestamp' # Event time column\n",
-        "# ))\n",
-        "\n",
-        "# 2. Preprocessing within Pathway\n",
-        "# processed_stream = input_stream.select(\n",
-        "#     input_stream.ID,\n",
-        "#     input_stream.SystemCodeNumber,\n",
-        "#     input_stream.Capacity,\n",
-        "#     input_stream.Latitude,\n",
-        "#     input_stream.Longitude,\n",
-        "#     input_stream.Occupancy,\n",
-        "#     input_stream.QueueLength,\n",
-        "#     input_stream.IsSpecialDay,\n",
-        "#     input_stream.Timestamp,\n",
-        "#     OccupancyRate=input_stream.Occupancy / input_stream.Capacity,\n",
-        "#     VehicleTypeWeight=input_stream.VehicleType.map(vehicle_type_weights),\n",
-        "#     TrafficConditionEncoded=input_stream.TrafficConditionNearby.map(traffic_mapping)\n",
-        "# )\n",
-        "\n",
-        "# 3. Calculate Raw and Normalized Demand\n",
-        "# demand_stream = processed_stream.select(\n",
-        "#     processed_stream.columns, # Keep all previous columns\n",
-        "#     RawDemand=processed_stream.apply(pathway_calculate_demand) # Apply demand function\n",
-        "# )\n",
-        "\n",
-        "# For normalization in streaming, you'd need a rolling min/max or a global aggregate.\n",
-        "# This is a simplification using pre-computed min/max from batch.\n",
-        "# normalized_demand_stream = demand_stream.select(\n",
-        "#     demand_stream.columns,\n",
-        "#     NormalizedDemand=(demand_stream.RawDemand - min_demand) / (max_demand - min_demand)\n",
-        "# )\n",
-        "\n",
-        "# 4. Model 1 (Stateful Price Update)\n",
-        "# This would involve `pw.reduce` or `pw.state.table` to maintain per-lot price state.\n",
-        "# For example, a state table for current prices:\n",
-        "# current_prices_table_model1 = pw.StateTable.from_table(\n",
-        "#     processed_stream.select(processed_stream.SystemCodeNumber).distinct().insert(\n",
-        "#         initial_price=BASE_PRICE\n",
-        "#     ),\n",
-        "#     primary_key=['SystemCodeNumber']\n",
-        "# )\n",
-        "# And then a join and update logic.\n",
-        "\n",
-        "# 5. Model 2 (Direct Application)\n",
-        "# model2_output_stream = normalized_demand_stream.select(\n",
-        "#     normalized_demand_stream.columns,\n",
-        "#     Model2_LivePrice=normalized_demand_stream.apply(pathway_calculate_model2_price)\n",
-        "# )\n",
-        "\n",
-        "# 6. Model 3 (Competitive Logic - Most Complex)\n",
-        "# Requires a live table of all lot prices and a join based on proximity.\n",
-        "# This would involve:\n",
-        "#   a. A table of all parking lot locations and their current prices (e.g., from Model 2 output).\n",
-        "#   b. For each incoming record, find its neighbors from the location table.\n",
-        "#   c. Join with the live prices table to get competitor prices.\n",
-        "#   d. Apply competitive logic.\n",
-        "\n",
-        "# 7. Output Stream\n",
-        "# pw.outputs.print(model2_output_stream.select(pw.this.Timestamp, pw.this.SystemCodeNumber, pw.this.Model2_LivePrice))\n",
-        "# Or, output to a Kafka topic, database, or directly to a Bokeh server for real-time visualization.\n",
-        "\n",
-        "# To run the Pathway pipeline:\n",
-        "# pw.run()\n",
-        "\"\"\"\n",
+
+  
         "print(\"\\nPathway setup involves:\")\n",
         "print(\"- Defining input data streams (e.g., from CSV, Kafka, custom generators).\")\n",
         "print(\"- Applying transformations (`.select`, `.map`, `.filter`) and stateful computations (`.reduce`, `pw.StateTable`).\")\n",
